# pan-os-api-xml

./: CHANGELOG.md  README.md  pan-os-api-xml.cabal
sample/license/: request.xml  response.txt  response.xml
src/Panos/Api/Xml/: License.hs  Licenses.hs
test/: Main.hs
