cabal-version: 3.0
name: pan-os-api-xml
version: 0.1.0.0
synopsis: Parse PAN-OS API responses
bug-reports: https://github.com/layer-3-communications/pan-os-api-xml/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2021 Layer 3 Communications
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Panos.Api.Xml.License
    Panos.Api.Xml.Licenses
  build-depends:
    , base >=4.14 && <5
    , xml-syntax
    , text-short >=0.1.3
    , primitive >=0.7
    , chronos >=1.1.2 && <1.2
    , bytesmith >=0.3.7 && <0.4
    , byteslice >=0.2.6
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , pan-os-api-xml
    , tasty-golden
    , tasty >=1.4.2
    , pretty-show >=1.10
    , byteslice
    , bytestring
    , xml-syntax

